; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-op-filter.c_pdf_filter_RG.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-op-filter.c_pdf_filter_RG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"DeviceRGB\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, float, float, float)* @pdf_filter_RG to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pdf_filter_RG(i32* %0, i32* %1, float %2, float %3, float %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca [3 x float], align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store float %4, float* %10, align 4
  %12 = getelementptr inbounds [3 x float], [3 x float]* %11, i64 0, i64 0
  %13 = load float, float* %8, align 4
  store float %13, float* %12, align 4
  %14 = getelementptr inbounds float, float* %12, i64 1
  %15 = load float, float* %9, align 4
  store float %15, float* %14, align 4
  %16 = getelementptr inbounds float, float* %14, i64 1
  %17 = load float, float* %10, align 4
  store float %17, float* %16, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @fz_device_rgb(i32* %20)
  %22 = call i32 @pdf_filter_CS(i32* %18, i32* %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load i32*, i32** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = getelementptr inbounds [3 x float], [3 x float]* %11, i64 0, i64 0
  %26 = call i32 @pdf_filter_SC_color(i32* %23, i32* %24, i32 3, float* %25)
  ret void
}

declare dso_local i32 @pdf_filter_CS(i32*, i32*, i8*, i32) #1

declare dso_local i32 @fz_device_rgb(i32*) #1

declare dso_local i32 @pdf_filter_SC_color(i32*, i32*, i32, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
